fix spacing issue with errors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -179,7 +179,6 @@ a:hover {
 .hidden {
   max-height: 0;
   overflow: hidden;
-  */
 }
 
 .search input, .search button {
@@ -493,6 +492,8 @@ h2 .fav-heart img {
 .errorMessage.hidden {
   max-height: 0;
   overflow: hidden;
+  /*margin-top: 0;*/
+  display: none;
 }
 
 
